force-app/main/default/objects/Xero_Invoice__c/Xero_Invoice__c.object-meta.xml
<CustomObject>
    <label>Xero Invoice</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>