force-app/main/default/objects/Xero_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Xero Invoices</relationshipLabel>
    <relationshipName>Xero_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>