force-app/main/default/objects/Xero_Invoice__c/fields/BookingOrder__c.field-meta.xml
<CustomField>
    <fullName>BookingOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related booking/order</description>
    <label>Booking Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Xero Invoices</relationshipLabel>
    <relationshipName>Xero_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>