force-app/main/default/objects/Xero_Invoice__c/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <description>Description of what invoice is for</description>
    <label>Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>