force-app/main/default/objects/Xero_Invoice__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Date of most recent payment</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>