force-app/main/default/objects/Xero_Invoice__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <description>When data was last synced from Xero</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>