force-app/main/default/objects/Xero_Invoice__c/fields/Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Created?</label>
    <type>Checkbox</type>
</CustomField>