force-app/main/default/objects/Xero_Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Derived from Xero data</fullName>
                <isActive>false</isActive>
                <label>Derived from Xero data</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
                <isActive>false</isActive>
                <label>Overdue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>