force-app/main/default/objects/Xero_Invoice__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Xero Invoices</relationshipLabel>
    <relationshipName>Xero_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>