force-app/main/default/objects/Xero_Invoice__c/fields/Total_Tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_amount__c</fullName>
    <label>Total Tax amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>