force-app/main/default/objects/Xero_Invoice__c/fields/Xero_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_Number__c</fullName>
    <description>External ID - Xero&apos;s invoice GUID</description>
    <label>Xero Invoice Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>