force-app/main/default/objects/Xero_Invoice__c/fields/Xero_URL__c.field-meta.xml
<CustomField>
    <fullName>Xero_URL__c</fullName>
    <description>Direct link to invoice in Xero</description>
    <label>Xero URL</label>
    <type>Url</type>
</CustomField>