force-app/main/default/objects/Xero_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Xero_Invoice_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Event_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>